
- #10???: Correct the RNTM bytecode section (-use-runtime mode) for paths
  greater than 125 characters when *not* using shebang headers. camlheader_ur no
  longer exists.
  (David Allsopp, review by ???)

- #10???: Correctly quote -use-runtime argument when executing and linking
  (specifically, double quote characters and spaces in the path now work).
  (David Allsopp, review by ???)

OCaml 4.13.0
-------------

### Language features:

- #10039: Safepoints
  Add poll points to native generated code. These are effectively
  zero-sized allocations and fix some signal and remembered set
  issues. Also multicore prerequisite.
  (Sadiq Jaffer, Stephen Dolan, Damien Doligez, Xavier Leroy,
   Anmol Sahoo, Mark Shinwell, review by Damien Doligez, Xavier Leroy,
   and Mark Shinwell)

- #9331: Improve error messages for functor application and functor types.
  (Florian Angeletti and Gabriel Radanne, review by Leo White)

- #10013: Let-punning
  Allow 'let* x in ...' and 'let%ext x in ...' as shorthand for
    'let* x = x in ...' and 'let%ext x = x in ...' respectively.
  (Stephen Dolan, review by Gabriel Scherer)

### Type system:

- #9584, #7074: Allow to name existentials in pattern-matching
  One can now write '(Cstr (type a) (x, y : int * a))' to give a name to
  existentials freshly introduced by GADT constructors.
  (Jacques Garrigue, review by Leo White and Gabriel Scherer)

- #10174: Make Tsubst more robust by avoiding strange workarounds
  (Takafumi Saikawa and Jacques Garrigue, review by Gabriel Scherer and
   Florian Angeletti)

- #10133: module type substitutions
  Allow 'SIG with module type T = F(X).S', 'SIG with module type T := sig end'
  and their local equivalent `module type T := sig type u end`
  (Florian Angeletti, review by Gabriel Radanne and Leo White)

- #10265: Move type_unboxed.unboxed into type_kind
  (Stephen Dolan, review by Gabriel Scherer)

### Runtime system:

- #9284: Add -config option to display the configuration of ocamlrun on stdout,